--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "lucide-react": "^0.453.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
